kubernetes/11-gocd/go-agent-fedora-29.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gocd-agent-fedora-29
spec:
  selector:
    matchLabels:
      app: gocd-agent-fedora-29 # has to match .spec.template.metadata.labels
  serviceName: "gocd-agent-fedora-29"
  replicas: 3
  template:
    metadata:
      labels:
        app: gocd-agent-fedora-29 # has to match .spec.selector.matchLabels
    spec:
      tolerations:
      - key: "gke-preemptible"
        operator: "Exists"
      containers:
      - name: gocd-agent-fedora-29
        image: ifire/gocd-agent-fedora-29:v19.2.0-chibifire-0.1
        resources:
          requests:
            cpu: 800m
            memory: 1.8G
          limits:
            cpu: 1800m
        ports:
        volumeMounts:
        - name: godata
          mountPath: /godata
        - name: gohome
          mountPath: /home/go
      volumes:
      - name: gocd-agent-secret
        secret:
          secretName: gocd-agent-secret
          defaultMode: 0400
  volumeClaimTemplates:
  - metadata:
      name: godata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 40Gi
  - metadata:
      name: gohome
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
