kubernetes/11-gocd/go-agent.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gocd-agent
spec:
  selector:
    matchLabels:
      app: gocd-agent # has to match .spec.template.metadata.labels
  serviceName: "gocd-agent"
  replicas: 2 # by default is 1
  template:
    metadata:
      labels:
        app: gocd-agent # has to match .spec.selector.matchLabels
    spec:
      updateStrategy:
        type: RollingUpdate
      containers:
      - name: gocd-agent
        image: ifire/gocd-agent-centos-7:v18.1.0-chibifire-0.9
        ports:
        volumeMounts:
        - name: godata
          mountPath: /godata
        - name: gohome
          mountPath: /home/go
  volumeClaimTemplates:
  - metadata:
      name: godata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: gohome
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
