kubernetes/11-gocd/go-server-direct-svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: gocd-server-direct
spec:
  ports:
  - port: 8154
    targetPort: 8154
  selector:
    app: gocd-server
  type: LoadBalancer
