kubernetes/11-gocd/go-server.yml
apiVersion: v1
kind: Service
metadata:
  name: gocd-server
  labels:
    app: gocd-server
spec:
  ports:
  - port: 8154
    name: web-ssl
  - port: 8153
    name: web
  selector:
    app: gocd-server
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gocd-server
spec:
  selector:
    matchLabels:
      app: gocd-server # has to match .spec.template.metadata.labels
  serviceName: "gocd-server"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: gocd-server # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: gocd-server
        image: gocd/gocd-server:v18.1.0
        ports:
        - containerPort: 8154
          name: web-ssl
        - containerPort: 8153
          name: web
        volumeMounts:
        - name: godata
          mountPath: /godata
  volumeClaimTemplates:
  - metadata:
      name: godata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
