kubernetes/11-gocd/go-server-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gocd-server
  annotations:
#    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - build.apps.chibifire.com
    secretName: gocd-tls
  rules:
  - host: build.apps.chibifire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gocd-server
          servicePort: 8154
